Fix - Minor fixes